fix action menu being overlapped by table control panel

--- a/UI/src/Styles/Components/screen-overlay.sass
+++ b/UI/src/Styles/Components/screen-overlay.sass
@@ -5,7 +5,6 @@
   right: -100%
   height: 100%
   width: 100%
-  z-index: 1000
   transition: right 0.3s ease-in-out
   &.active
     right: 0
